# hackzurich-implenia-challenge

./: .flake8  .pre-commit-config.yaml  docker-compose.yml
assets/: 1. Litigation_Report_Data_Input_Sample.xlsx  2. Litigation_Report_Overview_Sample.xlsx  2. Litigation_Report_Overview_Sample_original.xlsx  postgres_localhost-2023_09_17_01_38_19-dump.sql  postgres_localhost-2023_09_17_01_38_45-dump.sql
backend/: pyproject.toml
backend/hack/: __init__.py  api_models.py  constants.py  exceptions.py  helper_functions.py  main.py  webservice_api.py
backend/hack/data/: 1. Litigation_Report_Overview_Sample_Ltigation Report Group_2023.04.txt  2. Litigation_Report_Overview_Sample_Litigation Report Group_2023.06.txt  import.xlsx  small_combined.txt
backend/hack/handlers/: create_case_handler.py  helper_functions.py  summarize_handler.py
backend/hack/service/: gpt_import_service.py  pandas_import_service.py  question_service.py
frontend/: angular.json  generate_swagger.sh  package-lock.json  package.json  proxy.conf.local.js
frontend/src/@fuse/animations/: zoom.ts
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/@environments/: .env.ts  environment.dev.ts  environment.local.ts  environment.prod.ts  environment.ts
frontend/src/app/core/: safe.pipe.ts
frontend/src/openapi-generated/: README.md
frontend/src/openapi-generated/.openapi-generator/: FILES
frontend/src/openapi-generated/api/: analytics.service.ts  analytics.serviceInterface.ts  api.ts  case.service.ts  case.serviceInterface.ts  default.service.ts  default.serviceInterface.ts  question.service.ts  question.serviceInterface.ts  record.service.ts  record.serviceInterface.ts
frontend/src/openapi-generated/model/: caseRead.ts  (+23 more)
(+32 files in other folders)
